--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhi-Yi Lin"
-  avatar           : "IMG_9424_small.jpeg"
+  avatar           : "IMG_9424.jpeg"
   bio              : "PhD candidate @ CV Lab, TU Delft"
   location         :
   employ           :
