--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Home"
+title                    : "Zhi-Yi Lin"
 title_separator          : "-"
 name                     : &name "Zhi-Yi Lin"
 description              : &description "PhD candidate @ CV Lab, TU Delft"
